<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.StudentActivity">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="119dp"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView4"
        android:layout_marginBottom="222dp"
        android:text="@string/sex"
        android:textAlignment="textStart"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="119dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView6"
        android:layout_marginTop="184dp"
        android:text="@string/birth_day"
        android:textAlignment="textStart"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="119dp"
        android:layout_height="47dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView4"
        android:layout_marginTop="124dp"
        android:text="@string/address"
        android:textAlignment="textStart"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="119dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textView6"
        android:layout_marginEnd="62dp"
        android:text="TextView"
        android:textAlignment="textStart"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="119dp"
        android:layout_height="46dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView4"
        android:layout_marginBottom="106dp"
        android:text="@string/clas"
        android:textAlignment="textStart"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="119dp"
        android:layout_height="44dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView4"
        android:layout_marginBottom="162dp"
        android:text="@string/course"
        android:textAlignment="textStart"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="119dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="29dp"
        android:layout_marginTop="62dp"
        android:text="@string/name"
        android:textAlignment="textStart"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="159dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView8"
        android:layout_alignStart="@+id/tvName"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etClass"
        android:layout_width="159dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView13"
        android:layout_alignStart="@+id/tvName"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etCourse"
        android:layout_width="159dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView11"
        android:layout_alignStart="@+id/tvName"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etSex"
        android:layout_width="159dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView10"
        android:layout_alignStart="@+id/tvName"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnSendInfo"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="26dp"
        android:layout_marginStart="98dp"
        android:text="@string/result" />

    <EditText
        android:id="@+id/etBirthDay"
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignStart="@+id/tvName"
        android:ems="10"
        android:inputType="date" />

</RelativeLayout>