<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="170dp"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:text="@string/hello"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="22dp"
        android:layout_marginTop="148dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="95dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/etName"
        android:layout_toStartOf="@+id/textView"
        android:text="@string/name"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="166dp"
        android:layout_height="64dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView"
        android:layout_marginBottom="174dp"
        android:text="@string/submit" />
</RelativeLayout>