<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.StudentInforActivity">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="119dp"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView4"
        android:layout_marginBottom="222dp"
        android:text="@string/sex"
        android:textAlignment="textStart"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="119dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView6"
        android:layout_marginTop="184dp"
        android:text="@string/birth_day"
        android:textAlignment="textStart"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="119dp"
        android:layout_height="47dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView4"
        android:layout_marginTop="124dp"
        android:text="@string/address"
        android:textAlignment="textStart"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvClass"
        android:layout_width="119dp"
        android:layout_height="45dp"
        android:layout_alignStart="@+id/tvName"
        android:layout_alignTop="@+id/textView13"
        android:text="TextView"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvCourse"
        android:layout_width="119dp"
        android:layout_height="45dp"
        android:layout_alignStart="@+id/tvName"
        android:layout_alignTop="@+id/textView11"
        android:text="TextView"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvSex"
        android:layout_width="119dp"
        android:layout_height="45dp"
        android:layout_alignStart="@+id/tvName"
        android:layout_alignTop="@+id/textView10"
        android:text="TextView"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvBirthDay"
        android:layout_width="119dp"
        android:layout_height="45dp"
        android:layout_alignStart="@+id/tvName"
        android:layout_alignTop="@+id/textView4"
        android:text="TextView"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="119dp"
        android:layout_height="45dp"
        android:layout_alignStart="@+id/tvName"
        android:layout_alignTop="@+id/textView8"
        android:text="TextView"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="119dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textView6"
        android:layout_marginEnd="62dp"
        android:text="TextView"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="119dp"
        android:layout_height="46dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView10"
        android:layout_marginBottom="85dp"
        android:text="@string/clas"
        android:textAlignment="textStart"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="119dp"
        android:layout_height="44dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView4"
        android:layout_marginBottom="162dp"
        android:text="@string/course"
        android:textAlignment="textStart"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="119dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="29dp"
        android:layout_marginTop="62dp"
        android:text="@string/name"
        android:textAlignment="textStart"
        android:textSize="25sp"
        android:textStyle="bold" />

</RelativeLayout>